--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenKey": " this is my super secret untraceable key this is my super secret untraceable key this is my super secret untraceable key",
   "AllowedHosts": "*"
 }
