--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "TokenKey": " this is my super secret untraceable key this is my super secret untraceable key this is my super secret untraceable key",
+  "CloudinarySettings": {
+    "CloudName": "dfg58cump",
+    "ApiKey":"595943454997493",
+    "ApiSecret":""
+  },
   "AllowedHosts": "*"
 }
