--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,7 +9,7 @@
   "CloudinarySettings": {
     "CloudName": "dfg58cump",
     "ApiKey":"595943454997493",
-    "ApiSecret":"IthpWT6qNSvLNOTMa1flBcBlsDo"
+    "ApiSecret":""
   },
   "AllowedHosts": "*"
 }
