--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,6 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 API/appsettings.json
+/.vscode/appsettings.json
+appsettings.json
+appsettings.*.json
